Fix mobile popup going out of screen

--- a/assets/css/base.css
+++ b/assets/css/base.css
@@ -114,7 +114,7 @@ body{
     gap: 20px;
 }
 .overlay img{
-    max-width: 90vh;
+    max-width: 90vw;
     height: auto;
     width: auto;
     max-height: 90vh;
@@ -122,6 +122,12 @@ body{
     border: 2px solid rgba(193, 158, 71, 0.36);
     box-shadow: 0 0 100px rgba(193, 158, 71, 0.36);
     transition: transform 0.3s ease, opacity 0.3s ease;
+}
+
+@media only screen and (max-width: 600px) {
+    .overlay .img-container {
+        gap: 2rem;
+    }
 }
 
 @keyframes zoom-in {
